--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "SweetPortal-FE",
-  "version": "1.0.0-beta-5",
+  "name": "sweetPortal",
+  "version": "1.0.0",
   "main": "src/index.js",
   "license": "MIT",
   "author": "Safinaz Awad <safinaz.awad@sweetsystems.se>",
-  "repository": "PolymerX/polymer-skeleton",
-  "contributors": [
-    "Alessio Occhipinti <info@godev.space> (https://godev.space)",
-    "Mattia Astorino (http://equinsuocha.io/)"
-  ],
+  "repository": "SweetPortal",
+  "contributors": [],
   "scripts": {
+    "prebuild": "npm install",
     "build": "webpack --env.BROWSERS=module && webpack",
     "build:prod": "webpack --env.BROWSERS=module --env.NODE_ENV=production && webpack --env.NODE_ENV=production --optimize-minimize",
     "dev": "webpack-dev-server --hot --inline",
@@ -49,10 +47,13 @@
     "clean-webpack-plugin": "0.1.19",
     "concurrently": "3.5.1",
     "copy-webpack-plugin": "4.5.1",
+    "css-loader": "0.28.11",
     "cssnano": "3.10.0",
     "fs-extra": "6.0.0",
     "http-server": "0.11.1",
     "lighthouse": "2.9.4",
+    "mini-css-extract-plugin": "0.4.0",
+    "node-sass": "4.9.0",
     "postcss": "6.0.22",
     "postcss-cssnext": "3.1.0",
     "postcss-custom-media": "6.0.0",
@@ -63,18 +64,25 @@
     "postcss-nesting": "4.2.1",
     "postcss-reporter": "5.0.0",
     "postcss-selector-not": "3.0.1",
+    "sass-loader": "7.0.1",
     "standard-version": "4.3.0",
+    "style-loader": "0.21.0",
     "stylelint": "9.2.0",
     "stylelint-config-standard": "18.2.0",
     "text-loader": "0.0.1",
-    "web-component-tester": "6.5.0",
+    "web-component-tester": "6.6.0",
     "webpack": "4.7.0",
     "webpack-cli": "2.1.2",
     "webpack-dev-server": "3.1.4",
     "webpack-merge": "4.1.2",
+    "workbox-webpack-plugin": "3.2.0",
     "xo": "0.21.0"
   },
   "dependencies": {
-    "@polymer/polymer": "3.0.2"
+    "@polymer/polymer": "3.0.2",
+    "bootstrap": "4.1.1",
+    "jquery": "3.3.1",
+    "polymer-analyzer": "3.0.1",
+    "popper.js": "1.14.3"
   }
 }
