Alot of new stuff

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "copy-webpack-plugin": "4.5.1",
     "css-loader": "0.28.11",
     "cssnano": "3.10.0",
+    "exports-loader": "0.7.0",
     "fs-extra": "6.0.0",
     "http-server": "0.11.1",
     "lighthouse": "2.9.4",
@@ -68,7 +69,9 @@
     "standard-version": "4.3.0",
     "style-loader": "0.21.0",
     "stylelint": "9.2.0",
+    "stylelint-config-recommended-scss": "3.2.0",
     "stylelint-config-standard": "18.2.0",
+    "stylelint-scss": "3.1.0",
     "text-loader": "0.0.1",
     "web-component-tester": "6.6.0",
     "webpack": "4.7.0",
