--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,11 @@
 {
-  "extends": "stylelint-config-recommended-scss" 
+  "extends": "stylelint-config-recommended-scss",
+  "ignoreFiles": "./dist/**", 
+  "rules": {
+    "font-family-no-missing-generic-family-keyword": null,
+    "selector-type-no-unknown": null,
+    "no-descending-specificity": null,
+    "no-duplicate-selectors": null,
+    "media-feature-name-no-unknown":null
+  }
 }
